change index.html styles.css in module-3 n1

--- a/module-3/main/index.html
+++ b/module-3/main/index.html
@@ -4,9 +4,50 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>AGENCY PROFILE</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
+  <div class="page">
+    <!-- Первая часть документа -->
+    <div>
+      <h1>AGENCY PROFILE</h1>
+      <!-- <img src="" alt=""> -->
+      <h3>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, magni soluta. Quas repellat sapiente, maxime dolores nam harum earum, tempore eum ipsam.
+      </h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis libero error officia sequi tempore laudantium fugit repellendus, perferendis unde impedit! Molestiae ab culpa eligendi minima ea, corrupti error repudiandae ex! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus fugiat repudiandae repellat commodi possimus dicta fugit sit quidem, veritatis, voluptatem dolorum, laborum illo quis. Nostrum quaerat iste dolorum eum, fugit!
+      </p>
+    </div>
+    <!-- Вторая часть документа -->
+    <div>
+      <h2>OUR PRINCIPLES</h2>
+      <h3>laborum illo quis</h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas fugiat recusandae perspiciatis pariatur eaque asperiores aliquid quae tenetur, minima non, iste perferendis laudantium nobis necessitatibus temporibus maiores. Reiciendis, quis, dolorum.
+      </p>
+      <h3>laborum illo quis</h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas fugiat recusandae perspiciatis pariatur eaque asperiores aliquid quae tenetur, minima non, iste perferendis laudantium nobis necessitatibus temporibus maiores. Reiciendis, quis, dolorum.
+      </p>
+      <h3>laborum illo quis</h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas fugiat recusandae perspiciatis pariatur eaque asperiores aliquid quae tenetur, minima non, iste perferendis laudantium nobis necessitatibus temporibus maiores. Reiciendis, quis, dolorum.
+      </p>
+    </div>
+    <hr>
+    <!-- Третья часть документа -->
+    <div>
+      <h2>WHAT WE OFFER</h2>
+      <h3>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident mollitia inventore perferendis possimus pariatur odit fugiat aliquam fuga laborum dicta, quasi ullam, quos perspiciatis deleniti quibusdam dolorum harum, nobis aspernatur.
+      </h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum nihil saepe reprehenderit adipisci ea veritatis officia id quisquam nemo consectetur excepturi, sequi esse ipsum nisi voluptatum tempore nostrum sint reiciendis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti reiciendis dolor cumque fuga saepe animi ad nihil veritatis, eos velit ipsam debitis aliquid quidem provident. Commodi ratione cum sequi, nihil.
+      </p>
+      <!-- использовать 2 списока без пунчктиков? При помощи display, без флоутов -->
+    </div>
+  </div>
 </body>
 </html>
