--- a/module-3/main/index.html
+++ b/module-3/main/index.html
@@ -4,15 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>AGENCY PROFILE</title>
   <link rel="stylesheet" href="css/styles.css">
+  <title>HW M3 Main</title>
 </head>
 <body>
-  <div class="page">
+  <div class="wrapper">
     <!-- Первая часть документа -->
     <div>
       <h1>AGENCY PROFILE</h1>
-      <!-- <img src="" alt=""> -->
       <h3>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, magni soluta. Quas repellat sapiente, maxime dolores nam harum earum, tempore eum ipsam.
       </h3>
@@ -41,12 +40,42 @@
     <div>
       <h2>WHAT WE OFFER</h2>
       <h3>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident mollitia inventore perferendis possimus pariatur odit fugiat aliquam fuga laborum dicta, quasi ullam, quos perspiciatis deleniti quibusdam dolorum harum, nobis aspernatur.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident mollitia inventore perferendis possimus pariatur odit fugiat aliquam fuga laborum dicta, quasi ullam.
       </h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum nihil saepe reprehenderit adipisci ea veritatis officia id quisquam nemo consectetur excepturi, sequi esse ipsum nisi voluptatum tempore nostrum sint reiciendis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti reiciendis dolor cumque fuga saepe animi ad nihil veritatis, eos velit ipsam debitis aliquid quidem provident. Commodi ratione cum sequi, nihil.
       </p>
-      <!-- использовать 2 списока без пунчктиков? При помощи display, без флоутов -->
+      <ul>
+        <li>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </li>
+        <li>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </li>
+        <li>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </li>
+        <li>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </li>
+        <li>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </li>
+        <li>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </li>
+        <li>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </li>
+        <li>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </li>
+      </ul>
     </div>
   </div>
 </body>
