add HW main and additional module-3 n3

--- a/module-3/additional/index.html
+++ b/module-3/additional/index.html
@@ -11,7 +11,7 @@
   <div class="wrapper">
     <!-- Задание 1 (статьи) + Задание 2 (изображение) -->
     <h1>AGENCY PROFILE</h1>
-    <div><img src="" alt="My Cat"></div>
+    <img src="img/Barsik.jpg" alt="My cat Barsik">
     <h3>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, veritatis.
     </h3>
