--- a/module-3/main/index.html
+++ b/module-3/main/index.html
@@ -12,6 +12,7 @@
     <!-- Первая часть документа -->
     <div>
       <h1>AGENCY PROFILE</h1>
+      <img src="img/plane.png" alt="Plane">
       <h3>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, magni soluta. Quas repellat sapiente, maxime dolores nam harum earum, tempore eum ipsam.
       </h3>
