add HW main and additional module-3 n4

--- a/module-3/main/index.html
+++ b/module-3/main/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="wrapper">
     <!-- Первая часть документа -->
-    <div>
+    <div class="first-part">
       <h1>AGENCY PROFILE</h1>
       <img src="img/plane.png" alt="Plane">
       <h3>
@@ -21,7 +21,7 @@
       </p>
     </div>
     <!-- Вторая часть документа -->
-    <div>
+    <div class="second-part">
       <h2>OUR PRINCIPLES</h2>
       <h3>laborum illo quis</h3>
       <p>
@@ -36,7 +36,6 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas fugiat recusandae perspiciatis pariatur eaque asperiores aliquid quae tenetur, minima non, iste perferendis laudantium nobis necessitatibus temporibus maiores. Reiciendis, quis, dolorum.
       </p>
     </div>
-    <hr>
     <!-- Третья часть документа -->
     <div>
       <h2>WHAT WE OFFER</h2>
