--- a/module-4/main/index.html
+++ b/module-4/main/index.html
@@ -4,9 +4,82 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <!-- fonts -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One">
+  <!-- reset / mormalize -->
+  <link rel="stylesheet" href="">
+  <!-- main css file -->
+  <link rel="stylesheet" href="css/styles.css">
+  <title>HW M4 Main</title>
 </head>
 <body>
-
+  <div class="wrapper">
+    <!--The first part of the document -->
+    <div class="part-one">
+      <!-- First column -->
+      <div>
+        <h1>AGENCY PROFILE</h1>
+        <img src="img/image.jpg" alt="The first circle of hell">
+        <h3>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae non assumenda hic ipsa ex at, tempore et, sit libero, similique animi quisquam placeat laudantium esse consequatur eaque pariatur qui adipisci ipsum corporis quos. Ducimus rem iste at necessitatibus consequuntur consectetur illo eveniet architecto voluptatum unde, soluta laborum nisi sunt repudiandae cumque deleniti, incidunt in aspernatur enim temporibus suscipit possimus animi pariatur, quaerat perspiciatis. At praesentium aperiam nulla aliquid molestias eius, ipsa dicta deserunt dolor velit quas nobis commodi ratione delectus. Magnam similique iure nemo adipisci temporibus vitae a architecto, dolore, quidem harum officia excepturi earum facilis molestiae totam ipsa ducimus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore aperiam similique cupiditate. Totam maiores laudantium voluptas non, harum perferendis, a molestias eum, culpa facere iusto dignissimos omnis rerum ab assumenda consectetur. Quasi autem nisi repellat, cupiditate reiciendis qui quae facilis aperiam, laudantium delectus voluptate quam vel, repudiandae suscipit! Ducimus dolorum, inventore quasi minima omnis illo.
+        </p>
+      </div>
+      <!-- Second column-->
+      <div>
+        <h2>OUR PRINCIPLES</h2>
+        <ol>
+          <li>
+            <h3>Lorem ipsum.</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem corporis dignissimos similique, qui amet a! Voluptatum, omnis rerum.
+            </p>
+          </li>
+          <li>
+            <h3>Lorem ipsum.</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis fugit sed alias accusamus consequuntur odio, qui ab harum.
+            </p>
+          </li>
+          <li>
+            <h3>Lorem ipsum.</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores impedit nihil quo officiis porro, nam provident aut natus?
+            </p>
+          </li>
+        </ol>
+      </div>
+    </div>
+    <!-- The second part of the document -->
+    <div class="part-two">
+      <!-- First column -->
+      <div>
+        <h2>WHAT WE OFFER</h2>
+        <h3>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias praesentium architecto, beatae voluptatem officia nesciunt? Ipsum porro, ut aliquam culpa, eum impedit odio consequuntur sit, sunt reprehenderit quaerat possimus id.
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente laudantium velit, ea pariatur earum quia nesciunt, porro numquam magnam tenetur id error ut molestiae officiis rerum deserunt repellendus? Eveniet repudiandae fuga totam eligendi ea nesciunt, delectus accusantium voluptatem commodi omnis blanditiis quibusdam, explicabo alias nemo consequuntur a velit in reprehenderit deserunt exercitationem odio deleniti cumque animi ullam eius. Voluptatum eaque saepe, voluptate vero nostrum adipisci aliquid, sapiente unde iusto, cum distinctio, perspiciatis laboriosam animi nobis officiis accusantium esse. Eligendi officia quae eum corporis id voluptatem sed adipisci animi, illum, eaque labore possimus. Accusamus similique aperiam aliquam, repellat eum corporis corrupti iure, quasi nisi recusandae reiciendis, nam eaque. Ratione mollitia dolore temporibus eligendi, at. Fuga vitae, neque porro debitis nesciunt voluptates!
+        </p>
+        <ul>
+          <li>Lorem ipsum dolor sit.</li>
+          <li>Odio vero sapiente quod!</li>
+          <li>Eum, doloremque debitis illo!</li>
+          <li>Odio sequi cumque voluptatibus?</li>
+          <li>Molestias illo laborum atque.</li>
+          <li>Culpa natus, quidem possimus!</li>
+          <li>Earum amet accusantium, quidem.</li>
+          <li>Tempore maiores eveniet dolorum.</li>
+          <li>Sapiente quam odio, ea.</li>
+        </ul>
+      </div>
+      <!-- Second column -->
+      <div>
+        <h1>TESTIMONIAL</h1>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
