change HW module-4 n2

--- a/module-4/main/index.html
+++ b/module-4/main/index.html
@@ -64,15 +64,17 @@
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente laudantium velit, ea pariatur earum quia nesciunt, porro numquam magnam tenetur id error ut molestiae officiis rerum deserunt repellendus? Eveniet repudiandae fuga totam eligendi ea nesciunt, delectus accusantium voluptatem commodi omnis blanditiis quibusdam, explicabo alias nemo consequuntur a velit in reprehenderit deserunt exercitationem odio deleniti cumque animi ullam eius. Voluptatum eaque saepe, voluptate vero nostrum adipisci aliquid, sapiente unde iusto, cum distinctio, perspiciatis laboriosam animi nobis officiis accusantium esse. Eligendi officia quae eum corporis id voluptatem sed adipisci animi, illum, eaque labore possimus. Accusamus similique aperiam aliquam, repellat eum corporis corrupti iure, quasi nisi recusandae reiciendis, nam eaque. Ratione mollitia dolore temporibus eligendi, at. Fuga vitae, neque porro debitis nesciunt voluptates!
         </p>
         <ul>
-          <li>Lorem ipsum dolor sit.</li>
-          <li>Odio vero sapiente quod!</li>
-          <li>Eum, doloremque debitis illo!</li>
-          <li>Odio sequi cumque voluptatibus?</li>
-          <li>Molestias illo laborum atque.</li>
-          <li>Culpa natus, quidem possimus!</li>
-          <li>Earum amet accusantium, quidem.</li>
-          <li>Tempore maiores eveniet dolorum.</li>
-          <li>Sapiente quam odio, ea.</li>
+          <li><p>Lorem ipsum dolor sit.</p></li>
+          <li><p>Odio vero sapiente quod!</p></li>
+          <li><p>Eum, doloremque debitis illo!</p></li>
+          <li><p>Odio sequi cumque voluptatibus?</p></li>
+          <li><p>Molestias illo laborum atque.</p></li>
+        </ul>
+        <ul>
+          <li><p>Culpa natus, quidem possimus!</p></li>
+          <li><p>Earum amet accusantium, quidem.</p></li>
+          <li><p>Tempore maiores eveniet dolorum.</p></li>
+          <li><p>Sapiente quam odio, ea.</p></li>
         </ul>
       </div>
       <!-- Second column -->
