add HW module-4 final

--- a/module-4/main/index.html
+++ b/module-4/main/index.html
@@ -4,11 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!-- fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One">
-  <!-- reset / mormalize -->
-  <link rel="stylesheet" href="">
-  <!-- main css file -->
   <link rel="stylesheet" href="css/styles.css">
   <title>HW M4 Main</title>
 </head>
@@ -21,7 +17,7 @@
         <h1>AGENCY PROFILE</h1>
         <img src="img/image.jpg" alt="The first circle of hell">
         <h3>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Lorem ipsum dolor sit amet, elit. Laborum, consectetur adipisicing.
         </h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae non assumenda hic ipsa ex at, tempore et, sit libero, similique animi quisquam placeat laudantium esse consequatur eaque pariatur qui adipisci ipsum corporis quos. Ducimus rem iste at necessitatibus consequuntur consectetur illo eveniet architecto voluptatum unde, soluta laborum nisi sunt repudiandae cumque deleniti, incidunt in aspernatur enim temporibus suscipit possimus animi pariatur, quaerat perspiciatis. At praesentium aperiam nulla aliquid molestias eius, ipsa dicta deserunt dolor velit quas nobis commodi ratione delectus. Magnam similique iure nemo adipisci temporibus vitae a architecto, dolore, quidem harum officia excepturi earum facilis molestiae totam ipsa ducimus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore aperiam similique cupiditate. Totam maiores laudantium voluptas non, harum perferendis, a molestias eum, culpa facere iusto dignissimos omnis rerum ab assumenda consectetur. Quasi autem nisi repellat, cupiditate reiciendis qui quae facilis aperiam, laudantium delectus voluptate quam vel, repudiandae suscipit! Ducimus dolorum, inventore quasi minima omnis illo.
@@ -79,7 +75,12 @@
       </div>
       <!-- Second column -->
       <div>
-        <h1>TESTIMONIAL</h1>
+        <h2>TESTIMONIAL</h2>
+        <h3 class="quote">
+          &#8220; Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae veritatis, tempore nisi, incidunt dolorum adipisci odio alias ullam maxime, placeat enim! &#8221;
+        </h3>
+        <h3 class="align">Mark Johnson</h3>
+        <p class="align">Director of Product Managemen</p>
       </div>
     </div>
   </div>
