rename folder in module-5

--- a/module-5/main and additional/index.html
+++ b/module-5/main and additional/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dorsa">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One">
   <link rel="stylesheet" href="css/styles.css">
-  <title>HW M5 Main</title>
+  <title>HW M5 Main and Additional</title>
 </head>
 <body>
   <div class="wrapper">
@@ -57,9 +57,9 @@
       </div>
       <h2>TOP DESTINATIONS</h2>
       <div class="image-area">
-        <div><img src="img/slide-two.jpg" alt="Venice"></div>
-        <div><img src="img/slide-three.jpg" alt="New-York"></div>
-        <div><img src="img/slide-four.jpg" alt="Paris"></div>
+        <div><img src="img/slide-venice.jpg" alt="Venice"></div>
+        <div><img src="img/slide-newyork.jpg" alt="New-York"></div>
+        <div><img src="img/slide-paris.jpg" alt="Paris"></div>
       </div>
     </main>
   </div>
