change HW module-5 n1

--- a/module-5/main and additional/index.html
+++ b/module-5/main and additional/index.html
@@ -48,12 +48,14 @@
       </ul>
     </header>
     <main>
-      <img src="img/slide-one.jpg" alt="Ship on the beach">
-      <h3 class="first-thesis">THERE ARE PLENTY OF PLACES</h3>
-      <h3 class="second-thesis">THAT ARE WORTH SEEING</h3>
-      <div class="switch">
-        <a href="#">1</a>
-        <a href="#">2</a>
+      <div class="relative">
+        <img src="img/slide-one.jpg" alt="Ship on the beach">
+        <h3 class="first-thesis">THERE ARE PLENTY OF PLACES</h3>
+        <h3 class="second-thesis">THAT ARE WORTH SEEING</h3>
+        <div class="switch">
+          <a href="#">&#8592;</a>
+          <a href="#">&#8594;</a>
+        </div>
       </div>
       <h2>TOP DESTINATIONS</h2>
       <div class="image-area">
