--- a/module-5/main and additional/index.html
+++ b/module-5/main and additional/index.html
@@ -12,6 +12,7 @@
 <body>
   <div class="wrapper">
     <header>
+      <a name="top"></a>
       <ul class="menu">
         <li class="menu-item">
           <a href="#">HOME</a>
@@ -48,7 +49,7 @@
       </ul>
     </header>
     <main>
-      <div class="relative">
+      <div>
         <img src="img/slide-one.jpg" alt="Ship on the beach">
         <h3 class="first-thesis">THERE ARE PLENTY OF PLACES</h3>
         <h3 class="second-thesis">THAT ARE WORTH SEEING</h3>
@@ -59,10 +60,20 @@
       </div>
       <h2>TOP DESTINATIONS</h2>
       <div class="image-area">
-        <div><img src="img/slide-venice.jpg" alt="Venice"></div>
+        <div>
+          <img src="img/slide-venice.jpg" alt="Venice">
+          <div class="description">
+            <h4>VENICE</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut ratione est unde earum ut non, esse quaerat rerum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, dicta. Lorem ipsum dolor sit amet.
+            </p>
+            <button type="button" title="Show details">Detalis</button>
+          </div>
+        </div>
         <div><img src="img/slide-newyork.jpg" alt="New-York"></div>
         <div><img src="img/slide-paris.jpg" alt="Paris"></div>
       </div>
+      <a href="#top" title="To the top"><img src="img/arrow.png" alt=""></a>
     </main>
   </div>
 </body>
