--- a/module-6/About_1024/index.html
+++ b/module-6/About_1024/index.html
@@ -14,40 +14,42 @@
   <div class="wrapper">
     <header>
       <a name="top"></a>
-      <ul class="menu">
-        <li class="menu-item">
-          <a href="#">HOME</a>
-        </li>
-        <li class="menu-item">
-          <a href="#">ABOUT</a>
-          <ul class="submenu">
-            <li class="submenu">
-              <a href="#">AGENCY</a>
-            </li>
-            <li class="submenu">
-              <a href="#">NEWS</a>
-            </li>
-            <li class="submenu">
-              <a href="#">TEAM</a>
-            </li>
-          </ul>
-        </li>
-        <li class="menu-item">
-          <a href="#">GALLERY</a>
-        </li>
-        <li class="logo">
-          <h1>JOURNEY</h1>
-        </li>
-        <li class="menu-item">
-          <a href="#">TOURS</a>
-        </li>
-        <li class="menu-item">
-          <a href="#">BLOG</a>
-        </li>
-        <li class="menu-item">
-          <a href="#">CONTACTS</a>
-        </li>
-      </ul>
+      <nav>
+        <ul class="menu">
+          <li class="menu-item">
+            <a href="#">HOME</a>
+          </li>
+          <li class="menu-item">
+            <a href="#">ABOUT</a>
+            <ul class="submenu">
+              <li class="submenu">
+                <a href="#">AGENCY</a>
+              </li>
+              <li class="submenu">
+                <a href="#">NEWS</a>
+              </li>
+              <li class="submenu">
+                <a href="#">TEAM</a>
+              </li>
+            </ul>
+          </li>
+          <li class="menu-item">
+            <a href="#">GALLERY</a>
+          </li>
+          <li class="logo">
+            <h1>JOURNEY</h1>
+          </li>
+          <li class="menu-item">
+            <a href="#">TOURS</a>
+          </li>
+          <li class="menu-item">
+            <a href="#">BLOG</a>
+          </li>
+          <li class="menu-item">
+            <a href="#">CONTACTS</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
       <div>
@@ -132,12 +134,19 @@
           <a href="#">INSURANCE</a><br>
           <a href="#">FAMILY TRAVEL</a>
         </div>
-        <div>
-          <p>CONTACT US&#58;</p><br>
-          <p><a href="tel:1-800-234-5678">1-800-234-5678</a></p>          
+        <div class="contacts">
+          <a href="#">CONTACT US&#58;</a><br>
+          <a href="#">TEL&#58; 1-800-234-5678</a><br>
+          <a href="#">info@demolink.org</a>
         </div>
       </div>
-      <div></div>
+      <div>
+        <a href="https://twitter.com/" class="twitter" target="_blank"></a>
+        <a href="https://www.facebook.com/" class="facebook" target="_blank"></a>
+        <a href="https://plus.google.com/" class="google-plus" target="_blank"></a>
+        <a href="https://www.instagram.com/" class="instagram" target="_blank"></a>
+        <p></p>
+      </div>
     </footer>
   </div>
 </body>
