--- a/module-6/About_1024/index.html
+++ b/module-6/About_1024/index.html
@@ -145,7 +145,9 @@
         <a href="https://www.facebook.com/" class="facebook" target="_blank"></a>
         <a href="https://plus.google.com/" class="google-plus" target="_blank"></a>
         <a href="https://www.instagram.com/" class="instagram" target="_blank"></a>
-        <p></p>
+      </div>
+      <div>
+        <p>Journey © 2013 | Privacy Policy | Website designed by TemplateMonster.com</p>
       </div>
     </footer>
   </div>
