change HW module-6 n7

--- a/module-6/About_1024/index.html
+++ b/module-6/About_1024/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300">
   <link rel="stylesheet" href="css/styles.css">
-  <title>HW M6 Main and additional</title>
+  <title>HW M6 About</title>
 </head>
 <body>
   <div class="wrapper">
@@ -119,6 +119,7 @@
           <p class="align">Director of Product Managemen</p>
         </div>
       </div>
+      <a href="#top" title="To the top"></a>
     </main>
     <footer>
       <div>
@@ -145,8 +146,6 @@
         <a href="https://www.facebook.com/" class="facebook" target="_blank"></a>
         <a href="https://plus.google.com/" class="google-plus" target="_blank"></a>
         <a href="https://www.instagram.com/" class="instagram" target="_blank"></a>
-      </div>
-      <div>
         <p>Journey © 2013 | Privacy Policy | Website designed by TemplateMonster.com</p>
       </div>
     </footer>
