--- a/module-6/Gallery_1024/index.html
+++ b/module-6/Gallery_1024/index.html
@@ -64,7 +64,36 @@
         <div><img src="img/photo-8.jpg" alt="photo-8"></div>
         <div><img src="img/photo-9.jpg" alt="photo-9"></div>
       </div>
+      <a href="#top" title="To the top"></a>
     </main>
+    <footer>
+      <div>
+        <div>
+          <a href="#">FAQS PAGE</a><br>
+          <a href="#">PEOPLE SAY</a>
+        </div>
+        <div>
+          <a href="#">USERFUL LINKS</a><br>
+          <a href="#">PARTNERS</a>
+        </div>
+        <div>
+          <a href="#">INSURANCE</a><br>
+          <a href="#">FAMILY TRAVEL</a>
+        </div>
+        <div class="contacts">
+          <a href="#">CONTACT US&#58;</a><br>
+          <a href="#">TEL&#58; 1-800-234-5678</a><br>
+          <a href="#">info@demolink.org</a>
+        </div>
+      </div>
+      <div>
+        <a href="https://twitter.com/" class="twitter" target="_blank"></a>
+        <a href="https://www.facebook.com/" class="facebook" target="_blank"></a>
+        <a href="https://plus.google.com/" class="google-plus" target="_blank"></a>
+        <a href="https://www.instagram.com/" class="instagram" target="_blank"></a>
+        <p>Journey &copy; 2013 | Privacy Policy | Website designed by TemplateMonster.com</p>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
