--- a/module-6/About_1024/About.html
+++ b/module-6/About_1024/About.html
@@ -122,26 +122,26 @@
       <a href="#top" title="To the top"></a>
     </main>
     <footer>
-      <div>
-        <div>
-          <a href="#">FAQS PAGE</a><br>
+      <div class="list">
+        <div class="nav">
+          <a href="#">FAQS PAGE</a>
           <a href="#">PEOPLE SAY</a>
         </div>
-        <div>
-          <a href="#">USERFUL LINKS</a><br>
+        <div class="nav">
+          <a href="#">USERFUL LINKS</a>
           <a href="#">PARTNERS</a>
         </div>
-        <div>
-          <a href="#">INSURANCE</a><br>
+        <div class="nav">
+          <a href="#">INSURANCE</a>
           <a href="#">FAMILY TRAVEL</a>
         </div>
-        <div class="contacts">
-          <a href="#">CONTACT US&#58;</a><br>
-          <a href="#">TEL&#58; 1-800-234-5678</a><br>
+        <div class="nav contacts">
+          <p href="#">CONTACT US&#58;</p>
+          <a href="tel: 1-800-234-5678">TEL&#58; 1-800-234-5678</a>
           <a href="#">info@demolink.org</a>
         </div>
       </div>
-      <div>
+      <div class="social">
         <a href="https://twitter.com/" class="twitter" target="_blank"></a>
         <a href="https://www.facebook.com/" class="facebook" target="_blank"></a>
         <a href="https://plus.google.com/" class="google-plus" target="_blank"></a>
