change HW nodule-7 n1

--- a/module-6(checked)/About_1024/About.html
+++ b/module-6(checked)/About_1024/About.html
@@ -137,7 +137,7 @@
         </div>
         <div class="nav contacts">
           <p href="#">CONTACT US&#58;</p>
-          <a href="tel: 1-800-234-5678">TEL&#58; 1-800-234-5678</a>
+          <a href="tel: 1-800-234-5678">tel&#58; 1-800-234-5678</a>
           <a href="#">info@demolink.org</a>
         </div>
       </div>
