--- a/module-7/Contacts_1024/Contacts.html
+++ b/module-7/Contacts_1024/Contacts.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300">
   <link rel="stylesheet" href="css/styles.css">
-  <title>HW M6 Gallery</title>
+  <title>HW M7 Contacts</title>
 </head>
 <body>
   <div class="wrapper">
@@ -52,19 +52,64 @@
       </nav>
     </header>
     <main>
-      <h2>OUR GALLERY</h2>
-      <div class="gallery">
-        <div><img src="img/photo-1.jpg" alt="photo-1"></div>
-        <div><img src="img/photo-2.jpg" alt="photo-2"></div>
-        <div><img src="img/photo-3.jpg" alt="photo-3"></div>
-        <div><img src="img/photo-4.jpg" alt="photo-4"></div>
-        <div><img src="img/photo-5.jpg" alt="photo-5"></div>
-        <div><img src="img/photo-6.jpg" alt="photo-6"></div>
-        <div><img src="img/photo-7.jpg" alt="photo-7"></div>
-        <div><img src="img/photo-8.jpg" alt="photo-8"></div>
-        <div><img src="img/photo-9.jpg" alt="photo-9"></div>
+      <div class="main">
+        <h2>STAY IN TOUCH</h2>
+        <div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d24208.890754297296!2d-73.93796467519877!3d40.67151557459519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1suk!2sua!4v1515219086503" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <div class="table">
+            <table>
+              <caption>8901 Marmora Road,<br> Glasgow, D04 89GR.</caption>
+              <tr>
+                <td>Freephone:</td>
+                <td><a href="tel: +1 800 559 6580">+1 800 559 6580</a></td>
+              </tr>
+              <tr>
+                <td>Telephone:</td>
+                <td><a href="tel: +1 800 603 6035">+1 800 603 6035</a></td>
+              </tr>
+              <tr>
+                <td>FAX:</td>
+                <td><a href="tel: +1 800 889 9898">+1 800 889 9898</a></td>
+              </tr>
+              <tr>
+                <td colspan="2">E-mail:<a href="#"> mail@demolink.org</a></td>
+              </tr>
+            </table>
+            <table>
+              <caption>9870 St Vincent Place,<br> Glasgow, DC 45 Fr 45.</caption>
+              <tr>
+                <td>Freephone:</td>
+                <td><a href="tel: +1 800 559 6580">+1 800 559 6580</a></td>
+              </tr>
+              <tr>
+                <td>Telephone:</td>
+                <td><a href="tel: +1 800 603 6035">+1 800 603 6035</a></td>
+              </tr>
+              <tr>
+                <td>FAX:</td>
+                <td><a href="tel: +1 800 889 9898">+1 800 889 9898</a></td>
+              </tr>
+              <tr>
+                <td colspan="2">E-mail:<a href="#"> mail@demolink.org</a></td>
+              </tr>
+            </table>
+          </div>
+        </div>
       </div>
-      <a href="#top" title="To the top"></a>
+      <div class="aside">
+        <h2>CONTACT US</h2>
+        <form class="" action="Contacts.html" method="get">
+          <input type="text" name="name" value="" placeholder="NAME" required>
+          <input type="email" name="email" value="" placeholder="EMAIL">
+          <input type="text" name="place" value="" placeholder="SUBJECT">
+          <textarea name="comment" placeholder="MESSAGE"></textarea>
+          <div>
+            <button type="reset" name="reset">Clear</button>
+            <button type="submit" name="submit">Send</button>
+          </div>
+        </form>
+        <a href="#top" title="To the top"></a>
+      </div>
     </main>
     <footer>
       <div class="list">
