--- a/module-7/Tours_1024/Tours.html
+++ b/module-7/Tours_1024/Tours.html
@@ -4,10 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dorsa">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300">
-  <link rel="stylesheet" href="css/styles.css">
   <title>Document</title>
 </head>
 <body>
@@ -51,17 +47,13 @@
         </ul>
       </nav>
     </header>
-    <main>
-      <div class="main">
-        <h2>STAY IN TOUCH</h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d77979.86758760149!2d4.828583912159631!3d52.354627397283934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c63fb5949a7755%3A0x6600fd4cb7c0af8d!2z0JDQvNGB0YLQtdGA0LTQsNC8LCDQndGW0LTQtdGA0LvQsNC90LTQuA!5e0!3m2!1suk!2sua!4v1512865360152" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-        <table></table>
-      </div>
-      <div class="aside">
-        <h2>CONTACT US</h2>
-        <form action=""></form>
-      </div>
-    </main>
+
+
+
+    <!--  -->
+
+
+
     <footer>
       <div class="list">
         <div class="nav">
@@ -78,7 +70,7 @@
         </div>
         <div class="nav contacts">
           <p href="#">CONTACT US&#58;</p>
-          <a href="tel: 1-800-234-5678">TEL&#58; 1-800-234-5678</a>
+          <a href="tel: 1-800-234-5678">tel&#58; 1-800-234-5678</a>
           <a href="#">info@demolink.org</a>
         </div>
       </div>
@@ -89,6 +81,7 @@
         <a href="https://www.instagram.com/" class="instagram" target="_blank"></a>
         <p>Journey &copy; 2013 | Privacy Policy | Website designed by TemplateMonster.com</p>
       </div>
-  </footer>
+    </footer>
+  </div>
 </body>
 </html>
