post HW module-7

--- a/module-7/Tours_1024/Tours.html
+++ b/module-7/Tours_1024/Tours.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dorsa">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/tours.css">
+  <title>Tours</title>
 </head>
 <body>
   <div class="wrapper">
@@ -47,13 +52,199 @@
         </ul>
       </nav>
     </header>
-
-
-
-    <!--  -->
-
-
-
+    <main>
+      <div class="main">
+        <h2>TOURS SPECIALS</h2>
+        <div class="gallery">
+          <div class="gallery-block">
+            <img src="img/tours-image-2-1x.jpg" srcset="img/tours-image-2-2x.jpg 2x" alt="Place one">
+            <ul>
+              <li><h3>Consectetur adipisicing</h3></li>
+              <li>
+                <span>Lorem ipsum dolor sit amet.</span>
+              </li>
+              <li>
+                <span>FROM &#36; 399</span>
+              </li>
+              <li>
+                <span>Lorem ipsum dolor sit amet.</span>
+              </li>
+              <li>
+                <span>FROM &#36; 299</span>
+              </li>
+              <li>
+                <button type="button" name="details">Details</button>
+              </li>
+            </ul>
+          </div>
+          <div class="gallery-block">
+            <img src="img/tours-image-3-1x.jpg" srcset="img/tours-image-3-2x.jpg 2x" alt="Place two">
+            <ul>
+              <li><h3>Consectetur adipisicing</h3></li>
+              <li>
+                <span class="description">Lorem ipsum dolor sit amet.</span>
+              </li>
+              <li>
+                <span class="price">FROM &#36; 399</span>
+              </li>
+              <li>
+                <span class="description">Lorem ipsum dolor sit amet.</span>
+              </li>
+              <li>
+                <span class="price">FROM &#36; 299</span>
+              </li>
+              <li>
+                <button type="button" name="details">Details</button>
+              </li>
+            </ul>
+          </div>
+          <div class="gallery-block">
+            <img src="img/tours-image-4-1x.jpg" srcset="img/tours-image-4-2x.jpg 2x" alt="Place three">
+            <ul>
+              <li><h3>Consectetur adipisicing</h3></li>
+              <li>
+                <span class="description">Lorem ipsum dolor sit amet.</span>
+              </li>
+              <li>
+                <span class="price">FROM &#36; 399</span>
+              </li>
+              <li>
+                <span class="description">Lorem ipsum dolor sit amet.</span>
+              </li>
+              <li>
+                <span class="price">FROM &#36; 299</span>
+              </li>
+              <li>
+                <button type="button" name="details">Details</button>
+              </li>
+            </ul>
+          </div>
+          <div class="gallery-block">
+            <img src="img/tours-image-5-1x.jpg" srcset="img/tours-image-5-2x.jpg 2x" alt="Place four">
+            <ul>
+              <li><h3>Consectetur adipisicing</h3></li>
+              <li>
+                <span class="description">Lorem ipsum dolor sit amet.</span>
+              </li>
+              <li>
+                <span class="price">FROM &#36; 399</span>
+              </li>
+              <li>
+                <span class="description">Lorem ipsum dolor sit amet.</span>
+              </li>
+              <li>
+                <span class="price">FROM &#36; 299</span>
+              </li>
+              <li>
+                <button type="button" name="details">Details</button>
+              </li>
+            </ul>
+          </div>
+          <div class="gallery-block">
+            <img src="img/tours-image-6-1x.jpg" srcset="img/tours-image-6-2x.jpg 2x" alt="Place five">
+            <ul>
+              <li><h3>Consectetur adipisicing</h3></li>
+              <li>
+                <span class="description">Lorem ipsum dolor sit amet.</span>
+              </li>
+              <li>
+                <span class="price">FROM &#36; 399</span>
+              </li>
+              <li>
+                <span class="description">Lorem ipsum dolor sit amet.</span>
+              </li>
+              <li>
+                <span class="price">FROM &#36; 299</span>
+              </li>
+              <li>
+                <button type="button" name="details">Details</button>
+              </li>
+            </ul>
+          </div>
+          <div class="gallery-block">
+            <img src="img/tours-image-1-1x.jpg" srcset="img/tours-image-1-2x.jpg 2x" alt="Place six">
+            <ul>
+              <li><h3>Consectetur adipisicing</h3></li>
+              <li>
+                <span class="description">Lorem ipsum dolor sit amet.</span>
+              </li>
+              <li>
+                <span class="price">FROM &#36; 399</span>
+              </li>
+              <li>
+                <span class="description">Lorem ipsum dolor sit amet.</span>
+              </li>
+              <li>
+                <span class="price">FROM &#36; 299</span>
+              </li>
+              <li>
+                <button type="button" name="details">Details</button>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="aside">
+        <h2>BROWSE</h2>
+        <form action="" method="post">
+          <span class="description">
+            Browse by Tour Operator
+          </span>
+          <select name="browse" id="">
+            <option value="" disabled selected hidden>
+              <span>Browse by Tour Operator</span>
+            </option>
+            <option value="lorem1">
+              Lorem ipsum dolor 1
+            </option>
+            <option value="lorem2">
+              Lorem ipsum dolor 2
+            </option>
+            <option value="lorem3">
+              Lorem ipsum dolor 3
+            </option>
+          </select>
+          <textarea name="" id="" placeholder="Browse by Tour Operator" disabled></textarea>
+          <button type="button" name="first-search">Search</button>
+        </form>
+        <h2>SEARCH</h2>
+        <form class="search" action="" method="post">
+          <span class="description caption">
+            All Tour Operators
+          </span>
+          <span class="description">Destination</span>
+          <select name="destination" id="">
+            <option value="" selected>Any destination</option>
+            <option value="paris">Paris</option>
+            <option value="london">London</option>
+            <option value="kiev">Kiev</option>
+          </select>
+          <span class="description">Departing</span>
+          <select name="departing" id="">
+            <option value="" selected>Any departing</option>
+            <option value="">14</option>
+            <option value="">16</option>
+            <option value="">24</option>
+          </select>
+          <span class="description">Price</span>
+          <select name="price" id="">
+            <option value="" selected>Any price</option>
+            <option value="">299&#36;</option>
+            <option value="">399&#36;</option>
+          </select>
+          <span class="description">Duration</span>
+          <select name="duration" id="">
+            <option value="" selected>Any duration</option>
+            <option value="">1 week</option>
+            <option value="">2 week</option>
+            <option value="">1 month</option>
+          </select>
+          <textarea name="" id="" placeholder="Any duration" disabled></textarea>
+          <button type="button" name="second-search">Search</button>
+        </form>
+        <a href="#top" title="To the top"></a>
+      </div>
+    </main>
     <footer>
       <div class="list">
         <div class="nav">
@@ -69,7 +260,7 @@
           <a href="#">FAMILY TRAVEL</a>
         </div>
         <div class="nav contacts">
-          <p href="#">CONTACT US&#58;</p>
+          <span href="#">CONTACT US&#58;</span>
           <a href="tel: 1-800-234-5678">tel&#58; 1-800-234-5678</a>
           <a href="#">info@demolink.org</a>
         </div>
